// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test id inheritance Direct component with external components 1`] = `
[
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "DirectComponent",
    "numberOfCalls": 1,
    "parent": null,
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "Template",
    "numberOfCalls": 2,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "DirectComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "TemplateInner",
    "numberOfCalls": 2,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "Template",
      "originMock": true,
      "parent": {
        "dataTestId": "test-id-1",
        "name": "DirectComponent",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/UseEffect.Inner.tsx",
  },
]
`;

exports[`Test id inheritance Direct component with internal component 1`] = `
[
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "DirectComponentInTheSameFile",
    "numberOfCalls": 1,
    "parent": null,
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "DirectComponent",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "DirectComponentInTheSameFile",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "Template",
    "numberOfCalls": 2,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "DirectComponent",
      "originMock": true,
      "parent": {
        "dataTestId": "test-id-1",
        "name": "DirectComponentInTheSameFile",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "TemplateInner",
    "numberOfCalls": 2,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "Template",
      "originMock": true,
      "parent": {
        "dataTestId": "test-id-1",
        "name": "DirectComponent",
        "originMock": true,
        "parent": {
          "dataTestId": "test-id-1",
          "name": "DirectComponentInTheSameFile",
          "originMock": true,
          "parent": null,
          "relativePath": "/src/__integration-tests__/components/common.tsx",
        },
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/UseEffect.Inner.tsx",
  },
]
`;

exports[`Test id inheritance Inheritance disabled: inheritance disabed 1`] = `
[
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "ComplexComponent",
    "numberOfCalls": 1,
    "parent": null,
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "recursiveFunction",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "ComplexComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "recursiveFunction",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "recursiveFunction",
      "originMock": true,
      "parent": {
        "dataTestId": "test-id-1",
        "name": "ComplexComponent",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
    },
    "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "recursiveFunction",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "recursiveFunction",
      "originMock": true,
      "parent": {
        "dataTestId": null,
        "name": "recursiveFunction",
        "originMock": true,
        "parent": {
          "dataTestId": "test-id-1",
          "name": "ComplexComponent",
          "originMock": true,
          "parent": null,
          "relativePath": "/src/__integration-tests__/components/common.tsx",
        },
        "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
      },
      "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
    },
    "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "UnregisteredComponentWithChildren",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "ComplexComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.unregistered.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "Template",
    "numberOfCalls": 2,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "ComplexComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "TemplateInner",
    "numberOfCalls": 2,
    "parent": {
      "dataTestId": null,
      "name": "Template",
      "originMock": true,
      "parent": {
        "dataTestId": "test-id-1",
        "name": "ComplexComponent",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/UseEffect.Inner.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "UnregisteredComponentWithOneUseRef",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "ComplexComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.unregistered.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "OneUseRef",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "ComplexComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/UseRef.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "OneUseCallback",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "ComplexComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/UseCallback.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "OneUseState",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "OneUseCallback",
      "originMock": true,
      "parent": {
        "dataTestId": "test-id-1",
        "name": "ComplexComponent",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/UseCallback.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/UseState.tsx",
  },
]
`;

exports[`Test id inheritance Inheritance disabled: inheritance disabed 2`] = `
[
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "ComplexComponent",
    "numberOfCalls": 1,
    "parent": null,
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "recursiveFunction",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "ComplexComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "recursiveFunction",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "recursiveFunction",
      "originMock": true,
      "parent": {
        "dataTestId": "test-id-1",
        "name": "ComplexComponent",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
    },
    "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "recursiveFunction",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "recursiveFunction",
      "originMock": true,
      "parent": {
        "dataTestId": null,
        "name": "recursiveFunction",
        "originMock": true,
        "parent": {
          "dataTestId": "test-id-1",
          "name": "ComplexComponent",
          "originMock": true,
          "parent": null,
          "relativePath": "/src/__integration-tests__/components/common.tsx",
        },
        "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
      },
      "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
    },
    "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "UnregisteredComponentWithChildren",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "ComplexComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.unregistered.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "Template",
    "numberOfCalls": 2,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "ComplexComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "TemplateInner",
    "numberOfCalls": 2,
    "parent": {
      "dataTestId": null,
      "name": "Template",
      "originMock": true,
      "parent": {
        "dataTestId": "test-id-1",
        "name": "ComplexComponent",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/UseEffect.Inner.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "UnregisteredComponentWithOneUseRef",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "ComplexComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.unregistered.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "OneUseRef",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "ComplexComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/UseRef.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "OneUseCallback",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "ComplexComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/UseCallback.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": null,
    "name": "OneUseState",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": null,
      "name": "OneUseCallback",
      "originMock": true,
      "parent": {
        "dataTestId": "test-id-1",
        "name": "ComplexComponent",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/UseCallback.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/UseState.tsx",
  },
]
`;

exports[`Test id inheritance Inheritance enabled - use case 1 1`] = `
[
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "ComplexComponent",
    "numberOfCalls": 1,
    "parent": null,
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "recursiveFunction",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "ComplexComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "recursiveFunction",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "recursiveFunction",
      "originMock": true,
      "parent": {
        "dataTestId": "test-id-1",
        "name": "ComplexComponent",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
    },
    "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "recursiveFunction",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "recursiveFunction",
      "originMock": true,
      "parent": {
        "dataTestId": "test-id-1",
        "name": "recursiveFunction",
        "originMock": true,
        "parent": {
          "dataTestId": "test-id-1",
          "name": "ComplexComponent",
          "originMock": true,
          "parent": null,
          "relativePath": "/src/__integration-tests__/components/common.tsx",
        },
        "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
      },
      "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
    },
    "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "UnregisteredComponentWithChildren",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "ComplexComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.unregistered.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "Template",
    "numberOfCalls": 2,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "ComplexComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "TemplateInner",
    "numberOfCalls": 2,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "Template",
      "originMock": true,
      "parent": {
        "dataTestId": "test-id-1",
        "name": "ComplexComponent",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/UseEffect.Inner.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "UnregisteredComponentWithOneUseRef",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "ComplexComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.unregistered.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "OneUseRef",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "ComplexComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/UseRef.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "OneUseCallback",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "ComplexComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/UseCallback.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "OneUseState",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "OneUseCallback",
      "originMock": true,
      "parent": {
        "dataTestId": "test-id-1",
        "name": "ComplexComponent",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/UseCallback.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/UseState.tsx",
  },
]
`;

exports[`Test id inheritance Inheritance enabled - use case 2 1`] = `
[
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "ComplexComponent",
    "numberOfCalls": 1,
    "parent": null,
    "relativePath": "/src/__integration-tests__/components/common.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "recursiveFunction",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "ComplexComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "recursiveFunction",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "recursiveFunction",
      "originMock": true,
      "parent": {
        "dataTestId": "test-id-1",
        "name": "ComplexComponent",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
    },
    "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "recursiveFunction",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "recursiveFunction",
      "originMock": true,
      "parent": {
        "dataTestId": "test-id-1",
        "name": "recursiveFunction",
        "originMock": true,
        "parent": {
          "dataTestId": "test-id-1",
          "name": "ComplexComponent",
          "originMock": true,
          "parent": null,
          "relativePath": "/src/__integration-tests__/components/common.tsx",
        },
        "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
      },
      "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
    },
    "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "UnregisteredComponentWithChildren",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "ComplexComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.unregistered.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-2",
    "name": "Template",
    "numberOfCalls": 2,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "ComplexComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-2",
    "name": "TemplateInner",
    "numberOfCalls": 2,
    "parent": {
      "dataTestId": "test-id-2",
      "name": "Template",
      "originMock": true,
      "parent": {
        "dataTestId": "test-id-1",
        "name": "ComplexComponent",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/UseEffect.Inner.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "UnregisteredComponentWithOneUseRef",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "ComplexComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/common.unregistered.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "OneUseRef",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "ComplexComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/UseRef.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "OneUseCallback",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "ComplexComponent",
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/components/common.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/UseCallback.tsx",
  },
  {
    "calls": [
      {
        "args": undefined,
        "stats": {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "OneUseState",
    "numberOfCalls": 1,
    "parent": {
      "dataTestId": "test-id-1",
      "name": "OneUseCallback",
      "originMock": true,
      "parent": {
        "dataTestId": "test-id-1",
        "name": "ComplexComponent",
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/components/common.tsx",
      },
      "relativePath": "/src/__integration-tests__/components/UseCallback.tsx",
    },
    "relativePath": "/src/__integration-tests__/components/UseState.tsx",
  },
]
`;
